--- a/style.css
+++ b/style.css
@@ -14,11 +14,14 @@ a {
 .links {
     border-top: 1px solid
 }
+/* Ex.15: Set table to have rounded corners */
+table {
+    border-radius: 10px;
+}
 
 /* 
     CSS EXERCISES
 
-    Ex.15: Set table to have rounded corners
     Ex.16: Add margin between every paragraph
     Ex.17: Create a class which change font size and boldness
     Ex.18: Create a class to hide a content
