--- a/style.css
+++ b/style.css
@@ -18,11 +18,14 @@ a {
 table {
     border-radius: 10px;
 }
+/* Ex.16: Add margin between every paragraph */
+p {
+    margin: 30px 0;
+}
 
 /* 
     CSS EXERCISES
 
-    Ex.16: Add margin between every paragraph
     Ex.17: Create a class which change font size and boldness
     Ex.18: Create a class to hide a content
     Ex.19: Add a green border to each td
